--- a/cloud-lab/roles/osp-facts/tasks/main.yml
+++ b/cloud-lab/roles/osp-facts/tasks/main.yml
@@ -8,14 +8,16 @@
    - name: Add host
      add_host:
       name: "{{ item.public_v4 }}"
-      group: "{{ item.metadata.group }}"
+      groups:
+        - "{{ item.metadata.group }}"
+        - "{{ item.metadata.deployment_name }}"
       ansible_ssh_private_key_file: /root/.ssh/openstack.pem
-      ansible_ssh_user: cloud-user
+      ansible_user: cloud-user
      with_items: "{{result.ansible_facts.openstack_servers}}"
-   - name: Add host
-     add_host:
-      name: "{{ item.public_v4 }}"
-      group: "{{ item.metadata.deployment_name }}"
-      ansible_ssh_private_key_file: /root/.ssh/openstack.pem
-      ansible_ssh_user: cloud-user
-     with_items: "{{result.ansible_facts.openstack_servers}}"
+   # - name: Add host
+   #   add_host:
+   #    name: "{{ item.public_v4 }}"
+   #    group: "{{ item.metadata.deployment_name }}"
+   #    ansible_ssh_private_key_file: /root/.ssh/openstack.pem
+   #    ansible_user: cloud-user
+   #   with_items: "{{result.ansible_facts.openstack_servers}}"
