--- a/cloud-lab/roles/osp-facts/tasks/main.yml
+++ b/cloud-lab/roles/osp-facts/tasks/main.yml
@@ -4,7 +4,6 @@
      os_server_facts:
       cloud: ospcloud
       region_name: RegionOne
-     register: result
    - name: Add host
      add_host:
       name: "{{ item.public_v4 }}"
@@ -13,11 +12,4 @@
         - "{{ item.metadata.deployment_name }}"
       ansible_ssh_private_key_file: /root/.ssh/openstack.pem
       ansible_user: cloud-user
-     with_items: "{{result.ansible_facts.openstack_servers}}"
-   # - name: Add host
-   #   add_host:
-   #    name: "{{ item.public_v4 }}"
-   #    group: "{{ item.metadata.deployment_name }}"
-   #    ansible_ssh_private_key_file: /root/.ssh/openstack.pem
-   #    ansible_user: cloud-user
-   #   with_items: "{{result.ansible_facts.openstack_servers}}"
+     with_items: "{{ openstack_servers }}"
