fixed file module paramenter

--- a/provision-production-env.yml
+++ b/provision-production-env.yml
@@ -5,8 +5,7 @@
     - name: create bin directory
       file:
         path: ~/bin
-        type: directory
-        state: present
+        state: directory
         mode: 0755
 
     - name: download common.sh
