enabling repo only on the 3-Tiers

--- a/cloud-lab/setup-3tier-aws.yml
+++ b/cloud-lab/setup-3tier-aws.yml
@@ -2,7 +2,7 @@
 - name: setup repo
   become: true
   gather_facts: false
-  hosts: all
+  hosts: frontends, apps, appdbs
   tasks:
     - name: enable repo
       template:
