--- a/cloud-lab/setup-3tier-aws.yml
+++ b/cloud-lab/setup-3tier-aws.yml
@@ -14,7 +14,7 @@
     - name: save pem file to local directory
       fetch:
         src: "{{ result.files[0].path }}"
-        dest: "~/{{ result.files[0].path | basename }}"
+        dest: "./projkey.pem"
         flat: true
 
 - name: setup repo
@@ -24,7 +24,6 @@
   remote_user: ec2-user
   tasks:
     - name: enable repo
-      ansible_ssh_private_key_file: "~/{{ result.files[0].path | basename }}"
       template:
         src: open_three-tier-app.repo
         dest: /etc/yum.repos.d/open_three-tier-app.repo
