--- a/cloud-lab/setup-3tier-aws.yml
+++ b/cloud-lab/setup-3tier-aws.yml
@@ -22,6 +22,7 @@
         path: /tmp/projkey.pem
         mode: 0400
       delegate_to: localhost
+      delegate_facts: true
 
 - name: setup repo
   become: true
