added gather_facts: false

--- a/provision-production-env.yml
+++ b/provision-production-env.yml
@@ -1,5 +1,6 @@
 ---
 - name: Provision Production environment for 3-Tier application
+  gather_facts: false
   hosts: localhost
   tasks:
     - name: create bin directory
