added delay 30 and timeout 1200

--- a/cloud-lab/setup-3tier-aws.yml
+++ b/cloud-lab/setup-3tier-aws.yml
@@ -7,8 +7,10 @@
   tasks:
     - name: wait for environment to be running
       wait_for:
+        host: bastion
         port: 22
-        timeout: 600
+        delay: 30
+        timeout: 1200
 
     - name: find pem file location
       find:
