added become: false to the wait_for task

--- a/cloud-lab/setup-3tier-aws.yml
+++ b/cloud-lab/setup-3tier-aws.yml
@@ -6,6 +6,7 @@
   remote_user: pipatel-redhat.com
   tasks:
     - name: wait for environment to be running
+      become: false
       wait_for:
         host: bastion
         port: 22
