--- a/cloud-lab/ec2_instance_facts.yml
+++ b/cloud-lab/ec2_instance_facts.yml
@@ -28,12 +28,10 @@
   hosts: localhost
   connection: local
   gather_facts: false
-  vars:
-    regions:
-      - us-east-1
   tasks:
     - name: ec2 instance facts
       ec2_instance_facts:
+        region: us-east-1
         filters:
           "tag:instance_filter": "three-tier-app-pipatel*"
       ansible_ssh_private_key_file: "/tmp/projkey.pem"
