--- a/cloud-lab/ec2_instance_facts.yml
+++ b/cloud-lab/ec2_instance_facts.yml
@@ -35,3 +35,6 @@
         filters:
           "tag:instance_filter": "three-tier-app-pipatel*"
       ansible_ssh_private_key_file: "/tmp/projkey.pem"
+
+    - debug:
+        var: instances
