--- a/cloud-lab/ec2_instance_facts.yml
+++ b/cloud-lab/ec2_instance_facts.yml
@@ -35,6 +35,7 @@
         filters:
           "tag:instance_filter": "three-tier-app-pipatel*"
       ansible_ssh_private_key_file: "/tmp/projkey.pem"
+      register: ec2_instance_facts
 
     - debug:
-        var: instances
+        var: ec2_instance_facts.instances
