--- a/cloud-lab/setup-3tier-aws.yml
+++ b/cloud-lab/setup-3tier-aws.yml
@@ -36,6 +36,7 @@
   gather_facts: false
   hosts: frontends, apps, appdbs
   remote_user: ec2-user
+  ansible_ssh_private_key_file: /tmp/projkey.pem
   tasks:
     - name: enable repo
       template:
@@ -48,6 +49,8 @@
   gather_facts: false # remove later! speeds up testing
   become: true
   remote_user: ec2-user
+  ansible_ssh_private_key_file: /tmp/projkey.pem
+
   roles:
     - name: app-server
 
@@ -56,6 +59,7 @@
   gather_facts: false # remove later! speeds up testing
   become: true
   remote_user: ec2-user
+  ansible_ssh_private_key_file: /tmp/projkey.pem
   roles:
     - name: db-server
 
@@ -64,5 +68,6 @@
   gather_facts: false # remove later! speeds up testing
   become: true
   remote_user: ec2-user
+  ansible_ssh_private_key_file: /tmp/projkey.pem
   roles:
     - name: proxy-server
