--- a/cloud-lab/roles/ec2-facts/tasks/main.yml
+++ b/cloud-lab/roles/ec2-facts/tasks/main.yml
@@ -13,5 +13,5 @@
   groups:
     - "{{ item.Name }}"
     - "{{ item.AnsibleGroup }}"
-      ansible_ssh_private_key_file: /tmp/projkey.pem
+  ansible_ssh_private_key_file: "/tmp/projkey.pem"
   with_items: "{{ ec2_instance_facts.instances }}"
