--- a/cloud-lab/roles/ec2-facts/tasks/main.yml
+++ b/cloud-lab/roles/ec2-facts/tasks/main.yml
@@ -11,7 +11,7 @@
   add_host:
     name: "{{ item.public_ip_address }}"
     groups:
-      - "{{ item.Name }}"
-      - "{{ item.AnsibleGroup }}"
+      - "{{ item.tags.Name }}"
+      - "{{ item.tags.AnsibleGroup }}"
     ansible_ssh_private_key_file: "/tmp/projkey.pem"
   with_items: "{{ ec2_instance_facts.instances }}"
