added ec2 in memory inventory role to test playbook

--- a/cloud-lab/test-prod.yml
+++ b/cloud-lab/test-prod.yml
@@ -2,6 +2,8 @@
 - name: test web page
   hosts: localhost
   gather_facts: false
+  roles:
+    - ec2-facts
   tasks:
     - name: access local webpage 1st time
       uri:
